minio/iceberg/iceberg.yaml
apiVersion: v1
kind: Service
metadata:
  name: iceberg-rest-catalog
  namespace: catalog
spec:
  ports:
  - name: http
    port: 8181
    targetPort: 8181
  selector:
    app: iceberg-rest-catalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceberg-rest-catalog
  namespace: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iceberg-rest-catalog
  template:
    metadata:
      labels:
        app: iceberg-rest-catalog
    spec:
      containers:
      - name: catalog
        image: tabulario/iceberg-rest:1.6.0
        ports:
        - containerPort: 8181
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
