minio/iceberg/iceberg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iceberg-ingress
  namespace: catalog
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: iceberg.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iceberg-rest-catalog
            port:
              number: 8181
